cmake_minimum_required(VERSION 3.27.0)
set(VERSION "1.0.0")
project(zad7 VERSION ${VERSION} LANGUAGES C CXX)

set(BINARY_DIR bin)
set(INCLUDE_DIR include)
SET (EXECUTABLE_OUTPUT_PATH ../${BINARY_DIR})
SET (CMAKE_RUNTIME_OUTPUT_DIRECTORY ../${BINARY_DIR})

set(CPACK_PROJECT_NAME ${PROJECT_NAME})
set(CPACK_PROJECT_VERSION ${VERSION})
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
add_compile_definitions(VERSION="${VERSION}")
add_compile_definitions(PROJECT_NAME="${PROJECT_NAME}")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -m64 -std=c++17")

set(CMAKE_CXX_FLAGS_DEBUG "-g -D DEBUG")


file(GLOB_RECURSE SOURCES
    ${INCLUDE_DIR}/*.c
    ${INCLUDE_DIR}/*.cpp
)
file(GLOB_RECURSE HEADERS
    ${INCLUDE_DIR}/*.h
    ${INCLUDE_DIR}/*.hpp
)

add_subdirectory(UTILS)
set(CMAKE_MODULE_PATH ${CMAKE_SOURCE_DIR}/cmake)  

add_executable(${PROJECT_NAME} main.cpp)# the name of the target operating system

# target_include_directories(${PROJECT_NAME} PUBLIC ${PNG_INCLUDE_DIR} ${CMAKE_CUDA_TOOLKIT_INCLUDE_DIRECTORIES} ${GLUT_INCLUDE_DIRS} ${GLEW_INCLUDE_DIRS} ${Boost_INCLUDE_DIRS})
target_include_directories(${PROJECT_NAME} PRIVATE ${MY_UTILS_INCLUDE} ${INCLUDE_DIR})
add_dependencies(${PROJECT_NAME} MY_UTILS)
# target_link_libraries(${PROJECT_NAME} ${LIBS})

# set(CMAKE_SYSTEM_NAME Windows)

set(CPACK_PROJECT_NAME ${PROJECT_NAME})
set(CPACK_PROJECT_VERSION ${VERSION})
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
set(CMAKE_EXE_LINKER_FLAGS "-static")
target_link_libraries(${PROJECT_NAME} PRIVATE MY_UTILS)
set(CMAKE_FIND_LIBRARY_SUFFIXES ".a" CONFIG)
